# LunaDAQ

./: CMakeLists.txt  README.md
cmake/Modules/: FindCAEN.cmake  Findgsoap.cmake
conf/: file_smluna.xml
include/: CAENBoardInfo.h  CAENBoards.h  CAENConfig.h  CAENFrames.h  CAENRegister.h  CAENRegisterBuilder.h  CAENRegisterBuilderPHA.h  CAENRegisterBuilderPSD.h  DataFrame.h  DataFrameBuilderPHA.h  DataFrameBuilderPSD.h  HistoWorker.h  InputFormDialog.h  LFFrames.h  LFReader.h  LFReaderWorker.h  ListFileDialog.h  ProjectManager.h  QRootCanvas.h  RUReader.h  RUReaderWorker.h  SpyServer.h  WaveWorker.h  XDAQMessenger.h  XDAQSpy.h
include/interface/: HistoSpyInterface.h  SlowControlBoard.h  SlowControlChannel.h  SlowControlInterface.h  WaveSpyInterface.h
include/registers/: Registers.h  RegistersPHA.h  RegistersPSD.h
src/: CAENBoards.cc  CAENConfig.cc  CAENRegister.cc  CAENRegisterBuilderPHA.cc  CAENRegisterBuilderPSD.cc  DataFrame.cc  HistoWorker.cc  InputFormDialog.cpp  LFReader.cc  LFReaderWorker.cc  ListFileDialog.cc  ProjectManager.cpp  QRootCanvas.cxx  RUReader.cc  RUReaderWorker.cc  SpyServer.cc  WaveWorker.cc  XDAQMessenger.cpp  XDAQSpy.cc  main.cpp
src/interface/: HistoSpyInterface.cpp  SlowControlBoard.cpp  SlowControlChannel.cpp  SlowControlInterface.cpp  WaveSpyInterface.cpp
ui/: HistoSpyInterface.ui  SlowControlInterface.ui  WaveSpyInterface.ui
